--- a/style.css
+++ b/style.css
@@ -48,7 +48,9 @@ b,strong{font-weight:600}
 hr,.rule{height:0;margin:15px 0;overflow:hidden;background:transparent;border:0;border-bottom:1px solid #dfe2e5}
 hr::before,.rule::before{display:table;content:""}
 hr::after,.rule::after{display:table;clear:both;content:""}
-table{border-spacing:0;border-collapse:collapse}
+table{width:100%!important;
+        table-layout: fixed!important;
+        overflow-wrap: break-word!important;}
 td,th{padding:0}
 button{cursor:pointer;border-radius:0}
 [hidden][hidden]{display:none !important}
